@@ -77,11 +77,11 @@ end module constants
 subroutine setconstants
   use constants
   implicit none
-  !scrsz=10.8  !Screen dimensions: MacBook, Gentoo
-  !scrrat=0.57 
+  scrsz=10.8  !Screen dimensions: MacBook, Gentoo on 1024x768
+  scrrat=0.57 
   
-  scrsz=14.406   !Screen dimensions: ThinkPad
-  scrrat=0.5875 
+  !scrsz=14.406   !Screen dimensions: ThinkPad
+  !scrrat=0.5875 
   
   pi       =  4*datan(1.d0)                         !Pi, area of circle/r^2
   tpi      =  2*pi
@@ -454,7 +454,7 @@ end subroutine locater
 !***********************************************************************************************************************************
 
 
-!************************************************************************************************************************************
+!***********************************************************************************************************************************
 subroutine rindex(narr,rarr,indx)  !Return a sorted index indx of array rarr of length n - single precision
   use kinds
   implicit none
@@ -466,9 +466,9 @@ subroutine rindex(narr,rarr,indx)  !Return a sorted index indx of array rarr of 
   call dindex(narr,darr,indx)  !Call the double-precision routine
   
 end subroutine rindex
-!************************************************************************************************************************************
+!***********************************************************************************************************************************
 
-!************************************************************************************************************************************
+!***********************************************************************************************************************************
 subroutine dindex(narr,arr,ind)  !Return a sorted index ind of array arr of length narr - double precision
   use kinds
   implicit none
@@ -557,7 +557,7 @@ subroutine dindex(narr,arr,ind)  !Return a sorted index ind of array arr of leng
   
   goto 1
 end subroutine dindex
-!************************************************************************************************************************************
+!***********************************************************************************************************************************
 
 
 
@@ -905,7 +905,7 @@ end subroutine quit_program
 
 
 
-!************************************************************************************************************************************
+!***********************************************************************************************************************************
 subroutine bin_data_1d(n,x,norm,nbin,xmin1,xmax1,xbin,ybin)  !Count the number of points in each bin (1D), taken from analyse_mcmc
   ! x - input: data, n points
   ! norm - input: normalise (1) or not (0)
@@ -949,7 +949,7 @@ subroutine bin_data_1d(n,x,norm,nbin,xmin1,xmax1,xbin,ybin)  !Count the number o
   if(norm.eq.1) ybin = ybin/(sum(ybin)+1.e-30)
   
 end subroutine bin_data_1d
-!************************************************************************************************************************************
+!***********************************************************************************************************************************
 
 
 !***********************************************************************************************************************************
@@ -975,7 +975,7 @@ end function time_stamp
 
 
 
-!************************************************************************************************************************************
+!***********************************************************************************************************************************
 subroutine set_PGPS_title(PSfile,PStitle)  !Set the title in a Postscript file generated by PGPlot
   implicit none
   integer :: status,system
@@ -998,6 +998,106 @@ subroutine set_PGPS_title(PSfile,PStitle)  !Set the title in a Postscript file g
   end if
   
 end subroutine set_PGPS_title
-!************************************************************************************************************************************
+!***********************************************************************************************************************************
+
+
+!***********************************************************************************************************************************
+!> \brief Read/create EggletonPlot settings file
+!! \todo  Find a conversion from paper size/ratio to screen size in pixels
+!<
+subroutine eggletonplot_settings()
+  use constants
+  implicit none
+  integer :: io,u
+  logical :: ex
+  character :: filename*99
+  !integer :: screen_size_x,screen_size_y
+  real :: screen_size, screen_ratio
+  
+  !Define namelist, file name
+  !namelist /ep_settings/ screen_size_x,screen_size_y
+  namelist /ep_settings/ screen_size, screen_ratio
+  filename = trim(homedir)//'/.eggletonplot'
+  inquire(file=trim(filename), exist=ex)
+  
+  u = 10
+  
+  if(ex) then
+     open(unit=u,form='formatted',status='old',action='read',position='rewind',file=trim(filename),iostat=io)
+     if(io.ne.0) then
+        write(0,'(A,/)')'  Error opening settings file '//trim(filename)//' for reading.'
+        return
+     end if
+     read(u, nml=ep_settings, iostat=io)
+     close(u)
+     
+     if(io.eq.0) then
+        !call pgxy2szrat(screen_size_x,screen_size_y, scrsz,scrrat)
+        scrsz = screen_size
+        scrrat = screen_ratio
+     else
+        
+        write(6,*)
+        write(0,'(A)')'  An error occured when reading the settings file '//trim(filename)// &
+             ', using default settings.'
+        write(6,'(A)')'  The format of your settings file may be outdated.'
+        write(6,'(A)')'  Consider renaming the existing file and rerunning this program to generate a new settings file.'
+        write(6,*)
+     end if
+     
+  else
+     
+     write(6,*)
+     write(6,'(A)')'  No settings file found.'
+     write(6,'(A)')'  Creating '//trim(filename)//' with default settings,'
+     write(6,'(A)')'  please edit it to set your preferences.'
+     write(6,*)
+     
+     !call pgszrat2xy(scrsz,scrrat, screen_size_x,screen_size_y)
+     screen_size = scrsz
+     screen_ratio = scrrat
+     
+     open(unit=u,form='formatted',status='new',action='write',position='rewind',file=trim(filename),iostat=io)
+     if(io.ne.0) then
+        write(0,'(A,/)')'  Error opening settings file '//trim(filename)//' for writing.'
+        return
+     end if
+     write(u, nml=ep_settings, iostat=io)
+     close(u)
+     if(io.ne.0) write(0,'(A)')'  An error occured when writing the settings file '//trim(filename)
+  end if
+  
+end subroutine eggletonplot_settings
+!***********************************************************************************************************************************
+
+
+
+
+!***********************************************************************************************************************************
+!> Convert PGPlot x,y dimensions to paper size and ratio  -  these may work for bitmap, but not necessarily for screens
+subroutine pgxy2szrat(x,y,size,ratio)
+  implicit none
+  integer, intent(in) :: x,y
+  real, intent(out) :: size,ratio
+  
+  size = real(x-1)/85.
+  ratio = real(y-1)/real(x-1)
+  
+end subroutine pgxy2szrat
+!***********************************************************************************************************************************
+
+
+!***********************************************************************************************************************************
+!> Convert PGPlot x,y dimensions to paper size and ratio  -  these may work for bitmap, but not necessarily for screens
+subroutine pgszrat2xy(size,ratio,x,y)
+  implicit none
+  real, intent(in) :: size,ratio
+  integer, intent(out) :: x,y
+  
+  x = nint(size*85) + 1
+  y = nint(size*ratio*85) + 1
+  
+end subroutine pgszrat2xy
+!***********************************************************************************************************************************
 
 
